app/assets/stylesheets/main.css
/* ... */
.brand_header .search_nav input.search::-webkit-input-placeholder  { color:#ccc; }
.brand_header .search_nav input.search:-moz-placeholder { color:#ccc; }

.brand_header .search_nav input.search_btn {
  width: 14px;
  height: 14px;
  border: none;
  box-shadow: none;
  padding: 3px;
}

.search_nav select {
  height: 17px;
  line-height: 16px;
  font-size: 10px;
  border: none;
  padding: 0 0 0 9px;

/*
-webkit-border-radius: 2px;
-webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-webkit-padding-end: 20px;
-webkit-padding-start: 2px;
-webkit-user-select: none;

border: 1px solid #AAA;
color: #555;
font-size: inherit;

padding-top: 2px;
padding-bottom: 2px;
 
*/

-webkit-appearance: button;
-moz-appearance: button;
background-image: url(../images/searchbar_dropdown_arrow.png);
background-position: 95% 50%;
background-repeat: no-repeat;

margin: 0;
overflow: hidden;

text-overflow: ellipsis;
white-space: nowrap;
}
.search_nav label.add-on {
  padding: 0px;
  height: 18px;
}

.search_nav .input-append label.add-on:last-child {
  -webkit-border-top-right-radius: 10px;
  -webkit-border-bottom-right-radius: 10px;
  -moz-border-radius-topright: 10px;
  -moz-border-radius-bottomright: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

.auth_topbar {
  color: #fff;
  height: 20px;
}
.topbar .fill {
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeae3',GradientType=0 );
}

.auth_topbar .fill {
  background: #3873af; /* Old browsers */
  background-color: #3873af; 
  background: -moz-linear-gradient(top,  #3873af 0%, #326092 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3873af), color-stop(100%,#326092)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #3873af 0%,#326092 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #3873af 0%,#326092 100%); /* Opera 11.10+ */
  background: linear-gradient(top,  #3873af 0%,#326092 100%); /* W3C */
  height:32px;
}
.auth_topbar .dropdown-menu {
  top: 26px;
  background-color: #326092 !important;
}
.auth_topbar .sign_in_cta {
  padding-top: 4px;
  float:left;
  }
.auth_topbar a {
  font-weight: bold;
  color: #eee;
}
.auth_topbar li {
  line-height: 24px;
  color: #ddd;
}
.auth_topbar.topbar div > ul a { 
  display: inline; 
}
.auth_topbar.topbar ul.dropdown-menu a { 
  display: block; 
  color: #eee !important;
}
.auth_topbar.topbar ul.dropdown-menu a:hover { 
  background-color: #3873AF;
  background-image: none;
}
.home-page-navbar-login input {
  background-color:#FFF;
  color:#000;
  margin-top:2px;
  margin-bottom:2px;
}
.home-page-navbar-login input[type="submit"] {
  background-color:#3895D7;
  color:#fff;
}

.home-page-navbar-login form{
  margin-top:0px;
  float:right;
}
.home-page-navbar-login  input[type=text]{
  background-color:#fff;
  height:15px;
  width:175px;
}
.home-page-navbar-login input[type=button]{
  background-color:#3491d6;
  color:#fff;
  height:25px;
}

.auth_topbar.topbar div > ul a img { 
  padding-top: 6px;
  vertical-align: top;
}

.brand_header .nav_topbar {
  top: 33px;
  position: absolute;
  z-index: inherit;
}
.brand_header .nav_topbar .fill {
  background: #ffffff; /* Old browsers */
  /* background: -moz-linear-gradient(top,  #ffffff 0%, #dddddd 100%); /* FF3.6+ */
  /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
  /* background: -webkit-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* Chrome10+,Safari5.1+ */
  /* background: -o-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* Opera 11.10+ */
  /* background: -ms-linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* IE10+ */
  /* background: linear-gradient(top,  #ffffff 0%,#dddddd 100%); /* W3C */
  /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
}
.brand_header .nav_topbar a {
  color: #3F9DE0;
  padding:15px 10px;
  font-size:14px;
  height: 45px;
  line-height:15px;
  text-shadow: 0 -0 0 rgba(0, 0, 0, 0);
}
.brand_header .nav_topbar a  span{
  color: #A8A8A8;
  display:block;
  font-size:12px;
  font-weight:normal;
}
.brand_header .nav_topbar .label {
  background-color:#FF6502;
  color:#fff;
  display:inline;
  height:10px;
  padding-top:4px;
  text-align:center;
  width:20px;
}

.brand_header .nav_topbar ul li {
  height: 65px;
  border-right:1px solid #eee;
}  
.brand_header .nav_topbar ul li:first-child {
  border-left: 1px solid #eee;
}
.brand_header .topbar div > ul .active > a, .nav .active > a {
  background: #dddddd; /* Old browsers */
  background: -moz-linear-gradient(top,  #dddddd 0%, #ffffff 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* IE10+ */
  background: linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dddddd', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
  color: #333;
  height: 35px;
}
/* ... */

